# neural_neophyte

./: .gitignore  README.md  licence.txt  neural_neophyte.py
Cpp/NeuralNeophyteCpp/: CMakeLists.txt  eloranking.cpp  eloranking.h  field.cpp  field.h  gameflow.cpp  gameflow.h  main.cpp  menu.cpp  menu.h  minmaxpruning.cpp  minmaxpruning.h  modelhandler.cpp  modelhandler.h  savelist.cpp  savelist.h  traintestvalidate.cpp  traintestvalidate.h  tree.cpp  tree.h
Cpp/NeuralNeophyteCpp/Tests/: classtests.cpp  classtests.h  randomtest.cpp  randomtest.h  timetests.cpp  timetests.h
Cpp/NeuralNeophyteCpp/data_types/: field.cpp  field.h  player.cpp  player.h  position.cpp  position.h  savelist.cpp  savelist.h
Cpp/NeuralNeophyteCpp/games/: chess.cpp  chess.h  fourinarow.cpp  fourinarow.h  game.cpp  game.h  kalaha.cpp  kalaha.h  pegsolitaire.cpp  pegsolitaire.h
Cpp/NeuralNeophyteCpp/learn_algorithms/: classifier.cpp  classifier.h
Cpp/NeuralNeophyteCpp/learn_algorithms/conservative/: minmaxpruning.cpp  minmaxpruning.h
Cpp/NeuralNeophyteCpp/learn_algorithms/cpp_based/: logisticsgd.cpp  logisticsgd.h  multilayerperceptron.cpp  neuralnetworkba.cpp  neuralnetworkba.h
Cpp/NeuralNeophyteCpp/learn_algorithms/nn_based/design_1/: logisticsgd.cpp  logisticsgd.h
Cpp/NeuralNeophyteCpp/learn_algorithms/nn_based/design_2/: layer.cpp  layer.h  neuralnetwork.cpp  neuralnetwork.h
Cpp/NeuralNeophyteCpp/learn_algorithms/nn_based/design_2b/: layer.cpp  layer.h  learn.cpp  learn.h  neuralnetwork.cpp  (+1 more)
Cpp/NeuralNeophyteCpp/n_random_distrib/: nrandomdistrib.cpp  nrandomdistrib.h
(+62 files in other folders)
