project(NeuralNeophyteCpp)
cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)
aux_source_directory(. SRC_LIST)
aux_source_directory(./games SRC_LIST)
aux_source_directory(./n_random_distrib SRC_LIST)
aux_source_directory(./learn_algorithms SRC_LIST)
aux_source_directory(./learn_algorithms/nn_based/design_1 SRC_LIST)
aux_source_directory(./learn_algorithms/nn_based/design_2 SRC_LIST)
aux_source_directory(./learn_algorithms/conservative SRC_LIST)
aux_source_directory(./data_types SRC_LIST)
aux_source_directory(./Tests SRC_LIST)
#SET(CMAKE_EXE_LINKER_FLAGS "-static -g")
add_executable(${PROJECT_NAME} ${SRC_LIST})

